--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "project/3rdparty/opencv"]
-	path = project/3rdparty/opencv
-	url = https://github.com/opencv/opencv
+[submodule "3rdparty/opencv"]
+	path = 3rdparty/opencv
+	url = https://github.com/opencv/opencv/
