Change chat link. Fix Windows build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Build
       run: |
         mkdir build && cd build
-        cmake -G "Visual Studio 16 2019" -A x64 ..
+        cmake .. -DCMAKE_BUILD_TYPE=Release
         cmake --build . --config Release -j 2
       shell: cmd
 
